<resources>
    <string name="app_name">小小指弹</string>
    <string name="app_network">网络设置</string>
    <string name="save_setting">保存</string>
    <string name="ip_filter">0123456789.</string>
    <string name="app_introduce">小小指弹</string>
    <string name="pass_blank">密 码</string>
    <string name="remenber_pass">记住密码</string>
    <string name="net_set">网络设置</string>
    <string name="version_name">版本号</string>
    <string name="login">登录</string>
    <string name="reset">重置</string>
    <string name="login_name_hint">请输入账号</string>
    <string name="login_pass_hint">请输入密码</string>
    <string name="pass_filter">0123456789abcdefghijklmnopqrstuvwxyz</string>
    <string name="input_hint">请输入密码</string>
    <string name="qq_login">qq登录</string>
    <string name="best_select_class">精选好课</string>
    <string name="share_app">分享APP</string>
    <string name="exit_login">退出登录</string>
    <string name="check_for_update">检查更新</string>
    <string name="store">商城</string>
    <string name="study_platform">学习平台</string>
    <string name="videos">视频</string>
    <string name="voice">语音</string>
    <string name="personal_center">个人中心</string>
</resources>
