<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">


    <data>


    </data>


    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/login_back"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_weight="2"
            />

        <TextView
            style="@style/tittleLogin"
            android:layout_weight="0.6"
            android:visibility="gone"
            android:text="@string/app_introduce"/>

        <LinearLayout
            style="@style/llTopLocationLogin"
            android:layout_weight="0.7"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_blank"
                android:textColor="@color/colorTitleBlack"
                android:textSize="20sp"/>

            <com.iguitar.xiaoxiaozhitan.ui.view.ClearEditText
                android:id="@+id/edit_pass1"
                style="@style/myClearEditTextLoginStyle"
                android:digits="@string/pass_filter"
                android:hint="@string/input_hint"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            style="@style/llTopLocationLogin"
            android:layout_weight="0.7">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="23dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/user"/>

            <com.iguitar.xiaoxiaozhitan.ui.view.ClearEditText
                android:id="@+id/edit_name"
                style="@style/myClearEditTextLoginStyle"
                android:hint="@string/login_name_hint"/>

        </LinearLayout>


        <LinearLayout
            style="@style/llTopLocationLogin"
            android:layout_weight="0.7">

            <ImageView
                android:layout_width="19dp"
                android:layout_height="23dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/pass"/>

            <com.iguitar.xiaoxiaozhitan.ui.view.ClearEditText
                android:id="@+id/edit_pass"
                style="@style/myClearEditTextLoginStyle"
                android:hint="@string/login_pass_hint"
                android:inputType="textPassword"/>

        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:orientation="horizontal"-->
        <!--android:paddingLeft="20dp"-->
        <!--android:paddingRight="20dp">-->

        <!--<TextView-->
        <!--android:id="@+id/tv_sure_shelf"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_toLeftOf="@+id/chb_save"-->
        <!--android:text="核对药架："-->
        <!--android:textColor="@color/colorTitleBlack"-->
        <!--android:textSize="16sp"-->
        <!--android:visibility="gone"/>-->

        <!--<View-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"/>-->

        <!--<CheckBox-->
        <!--android:id="@+id/chb_save"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_weight="6"-->
        <!--android:button="@null"-->
        <!--android:checked="false"-->
        <!--android:drawableLeft="@drawable/chb_save_login"-->
        <!--android:text="记住密码"-->
        <!--android:textColor="@color/colorTitleWhite"-->
        <!--android:textSize="18sp"/>-->

        <!--<View-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"/>-->

        <!--<RelativeLayout-->
        <!--android:id="@+id/rel_network"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_weight="6"-->
        <!--android:padding="5dp">-->


        <!--<TextView-->
        <!--android:id="@+id/tv_network"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:text="网络设置"-->
        <!--android:textColor="@color/colorTitleWhite"-->
        <!--android:textSize="18sp"/>-->

        <!--<ImageView-->
        <!--android:id="@+id/iv_network"-->
        <!--android:layout_width="25dp"-->
        <!--android:layout_height="22dp"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_toLeftOf="@+id/tv_network"-->
        <!--android:src="@mipmap/setting"/>-->

        <!--</RelativeLayout>-->

        <!--<View-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"/>-->
        <!--</LinearLayout>-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chb_save"
                style="@style/mychbStyle"
                android:layout_marginLeft="50dp"
                android:drawableLeft="@drawable/chb_save_login"
                android:text="@string/remenber_pass"
                android:visibility="visible"/>


            <LinearLayout
                android:id="@+id/rel_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="50dp">

                <ImageView
                    android:id="@+id/iv_network"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginRight="5dp"
                    android:src="@mipmap/setting"/>

                <TextView
                    android:id="@+id/tv_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/net_set"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="18sp"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/rel_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_version"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/iv_qq"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginRight="5dp"
                    android:src="@mipmap/qq"/>

                <TextView
                    android:id="@+id/tv_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/qq_login"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="18sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_version"
                style="@style/version_style"
                android:text="@string/version_name"/>

            <RelativeLayout
                style="@style/rlButtonLoginStyle"
                android:layout_marginBottom="10dp"
                android:layout_above="@id/rel_qq">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/myBottomButtonLogin"
                    android:text="@string/login"/>

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/myBottomButtonLogin"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/reset"
                    android:visibility="gone"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>


