<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="@color/colorTitleWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/colorTitleBlack"></LinearLayout>

        <com.iguitar.xiaoxiaozhitan.ui.view.CircleImageView
            android:id="@+id/iv_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/myicon"/>

        <TextView
            android:id="@+id/tv_user_name"
            style="@style/TextStyle"
            android:layout_alignTop="@+id/iv_user"
            android:layout_marginTop="26dp"
            android:layout_toLeftOf="@+id/view_line"
            android:layout_toStartOf="@+id/view_line"
            android:text="小小迷"
            android:textColor="@color/colorTitleWhite"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_press"
            style="@style/TextStyle"
            android:layout_alignLeft="@+id/tv_version"
            android:layout_alignStart="@+id/tv_version"
            android:layout_below="@+id/tv_user_name"
            android:text="沉迷练琴"/>

        <ImageView
            android:id="@+id/view_line"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_press"
            android:layout_alignTop="@+id/tv_press"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_press"
            android:background="#0000ff"/>

        <TextView
            style="@style/TextStyle"
            android:layout_alignBottom="@+id/tv_press"
            android:layout_alignTop="@+id/tv_press"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/view_line"
            android:text="日渐消瘦"/>

        <TextView
            android:id="@+id/tv_version"
            style="@style/TextStyle"
            android:layout_below="@+id/tv_press"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/iv_user"
            android:text="版本： 1.0"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            style="@style/LineStyle"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/ll_qq_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/PersonalImageStyle"
                android:src="@mipmap/qq_party"/>

            <TextView
                android:id="@+id/tv_first_qq_unit"
                style="@style/ListPersonal"
                android:text="交流一群:  422068207"/>
        </LinearLayout>

        <View
            style="@style/LineStyle"/>

        <LinearLayout
            android:id="@+id/ll_qq_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/PersonalImageStyle"
                android:src="@mipmap/qq_party"/>

            <TextView
                android:id="@+id/tv_second_qq_unit"
                style="@style/ListPersonal"
                android:text="交流二群:  518544404"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/pop_select"/>

        <LinearLayout
            android:id="@+id/ll_qq_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/PersonalImageStyle"
                android:src="@mipmap/qq_party"/>

            <TextView
                android:id="@+id/tv_third_qq_unit"
                style="@style/ListPersonal"
                android:text="交流三群:  607455254"/>
        </LinearLayout>

        <View
            style="@style/LineStyle"/>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/PersonalImageStyle"
                android:src="@mipmap/iv_share"/>

            <TextView
                android:id="@+id/tv_share"
                style="@style/ListPersonal"
                android:text="@string/share_app"/>
        </LinearLayout>

        <View
            style="@style/LineStyle"/>

        <LinearLayout
            android:id="@+id/ll_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/PersonalImageStyle"
                android:src="@mipmap/iv_update"/>

            <TextView
                android:id="@+id/tv_update"
                style="@style/ListPersonal"
                android:text="@string/check_for_update"/>
        </LinearLayout>

        <View
            style="@style/LineStyle"/>

        <LinearLayout
            android:id="@+id/ll_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/PersonalImageStyle"
                android:src="@mipmap/iv_exit"/>

            <TextView
                android:id="@+id/tv_exit"
                style="@style/ListPersonal"
                android:text="@string/exit_login"/>
        </LinearLayout>

        <View
            style="@style/LineStyle"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/colorTitleWhite"/>
    </LinearLayout>
</LinearLayout>